--- a/arkane2013/style.css
+++ b/arkane2013/style.css
@@ -35,11 +35,16 @@ body {
 	margin: 0 auto;
 }
 
-.content, .sidebar, .botbar {
+.content, .botbar {
 	border:1px solid gray;
 	border-radius:10px;
 	padding:10px;
 	margin:10px 0;
+}
+
+.thumbnail {
+	border:0px;
+	float:right;
 }
 
 a {
@@ -74,3 +79,7 @@ a:visited {
 	color:black;
 	background:white;
 } 
+
+.call-to-action {
+	color: #ee4c37;
+}
